# NeuralGraph

./: .claudeignore  .gitignore  CLAUDE.md  GNN_Ablation.py  GNN_Daemon.py  GNN_LLM.py  GNN_LLM_parallel.py  GNN_LLM_repeat.py  GNN_LLM_repeat_bis.py  GNN_Launch_parallel.py  GNN_Main.py  GNN_Main_multimodel.py  GNN_N2.py  GNN_N2_5percent.py  GNN_N2_sparsity.py  GNN_N2_sparsity_Gaussian.py  GNN_PlotFigure.py  GNN_Recurrent.py  GNN_Rollout_multimodel.py  GNN_ablation.py  GNN_recurrent.py  NGP_trainer.py  README.md  _quarto.yml  analysis.md  analysis.py  analysis_experiment_Dale.md  analysis_experiment_Dale_1.md  analysis_experiment_convergence.md  analysis_experiment_convergence_1.md  analysis_experiment_convergence_3.md  analysis_experiment_convergence_4.md  analysis_experiment_convergence_5.md  analysis_experiment_convergence_6.md  analysis_experiment_convergence_7.md  analyze_loss.py  analyze_tiff.py  architecture.qmd  case-low-rank.qmd  case-sparse.qmd  (+78 more)
.claude/: settings.json
.claude/agents/: experiment-results-analyzer.md
.github/workflows/: lint.yml
.julia_env/: Project.toml
Claude_experiments/: analysis_experiment_convergence_2.md  analysis_experiment_convergence_3.md  analysis_experiment_convergence_4.md  analysis_experiment_convergence_5.md  experiment_convergence_1.md  experiment_convergence_2.md  experiment_convergence_3.md  experiment_convergence_5.md  signal_Claude_analysis_experiment_convergence_6.md  signal_Claude_ucb_scores.txt
assets/: landscape_partitioned_interactive.html  landscape_quadrant_interactive.html
cluster/: experiment1.sh  training_cluster.sh
config/: daemon_log.txt
config/CElegans/: signal_CElegans_c1.yaml  signal_CElegans_c10.yaml  signal_CElegans_c11.yaml  signal_CElegans_c12.yaml  signal_CElegans_c13.yaml  signal_CElegans_c14.yaml  signal_CElegans_c14_1.yaml  signal_CElegans_c14_2.yaml  signal_CElegans_c14_3.yaml  signal_CElegans_c14_4.yaml  signal_CElegans_c14_4a.yaml  signal_CElegans_c14_4b.yaml  signal_CElegans_c14_4c.yaml  signal_CElegans_c14_4d.yaml  signal_CElegans_c14_4e.yaml  signal_CElegans_c14_4f.yaml  signal_CElegans_c14_5.yaml  signal_CElegans_c14_6.yaml  signal_CElegans_c14_7.yaml  signal_CElegans_c14_8.yaml  signal_CElegans_c2.yaml  signal_CElegans_c3.yaml  signal_CElegans_c4.yaml  signal_CElegans_c5.yaml  signal_CElegans_c6.yaml  signal_CElegans_c7.yaml  signal_CElegans_c8.yaml  (+7 more)
docs/: GNN_MODIFICATION_GUIDE.md  architecture.html  case-low-rank.html  case-sparse.html  epistemic-analysis.html  experiment-loop.html  exploration-gallery.html  gnn-model.html  index.html  refactor_x_tensor_layout.md  results.html  search.json  signal_landscape_Claude_epistemic_analysis.md  signal_landscape_Claude_epistemic_detailed.md  signal_landscape_Claude_epistemic_edges.md  styles.css
envs/: condaenv.vv20wa3q.requirements.txt  environment.ci.yaml  environment.linux.yaml  environment.mac.yaml  test_env_python.py
hooks/: README.md  install.sh  pre-commit
rfcs/: rfc-01.md
scripts/: download_davis.py  download_youtube_vos.py
tmp/: graph_data_generator_.py  graph_trainer_.py  utils_models.py
(+1178 files in other folders)
