[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralGraph"
version = "0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable only rules that catch runtime errors
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (import errors, undefined names, etc.)
    "B",    # flake8-bugbear (likely bugs and design problems)
    "PLE",  # Pylint Error rules (runtime errors)
    "PLR",  # Pylint Refactor rules (potential bugs like tuple unpacking issues)
    "RET",  # flake8-return (return statement issues)
]

# Disable opinionated style rules
ignore = [
    "E501",   # line too long
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "PLR0911", # too many return statements
    "B008",   # function call in argument defaults
    "B006",   # mutable argument defaults (often intentional in ML code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__.py files
