[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralGraph"
version = "0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable only rules that catch actual runtime errors
select = [
    "F403",   # star imports are banned (prevents undefined name detection)
    "F821",   # undefined name (will cause NameError at runtime)
    "PLE",    # Pylint Error rules (runtime errors)
]

# Disable all code quality/style rules
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__.py files
