[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralGraph"
version = "0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable ONLY rules that catch actual runtime errors
select = [
    "F",      # Pyflakes: NameError, ImportError, UnboundLocalError, etc.
    "E9",     # Syntax errors that cause immediate failure
    "PLE",    # Pylint Error rules (actual runtime errors)
]

# Explicitly ignore all style/quality rules that don't cause runtime errors
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__.py files
